# HazelRust

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXECUTION_PLAN.md  LICENSE  README.md  deny.toml  info
.brokk/: project.properties
.config/: nextest.toml
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  fuzz.yml
bench/: analyze.py  chartdata.py  gen_manifest.py  hdr.py  manifest.h2h.json  manifest.headline.json  manifest.t0.json  manifest.t1.json  mkcharts.py  mkdocx.py  mkreport_h2h.py  mkscenarios.py  run.py
bench-java/: build.gradle  settings.gradle
benchmarks/h2h/: provenance.json
benchmarks/h2h_v2/: provenance.json
benchmarks/h2h_v3/: provenance.json
benchmarks/results/: rust_results.json
docs/: CBDC_READINESS_ASSESSMENT.md  CBDC_REMEDIATION_PLAN.md  CLIENT_COMPLETENESS.md  REMAINING_ISSUES.md  TEST_RESULTS.md
docs/cbdc/: AUDIT_DIGEST.md  BENCHMARK_KICKOFF_PROMPT.md  BENCHMARK_METHODOLOGY.md  BENCHMARK_POSTOPT_ADDENDUM.md  BENCHMARK_REPORT.md  CONSTANTS_VERIFICATION.md  EVIDENCE_LOG.md  FULL_TECHNICAL_VALIDATION_HANDOFF.md  HazelRust_vs_Java_Benchmark_Report.docx  HazelRust_vs_Java_H2H_Report.docx  HazelRust_vs_Java_H2H_Report.md  HazelRust_vs_Java_H2H_Report_v2.docx  HazelRust_vs_Java_H2H_Report_v2.md  HazelRust_vs_Java_H2H_Report_v3.docx  HazelRust_vs_Java_H2H_Report_v3.md  HazelRust_vs_Java_Scenarios_Report.docx  INDEPENDENT_PRODUCTION_READINESS_ASSESSMENT.md  NEXT_SESSION_HANDOFF.md  PERFORMANCE_AUDIT.md  PRODUCTION_READINESS_ROADMAP.md  README.md  REMEDIATION_RESULTS.md
docs/user-guide/: cluster-failover.md  distributed-caching.md  getting-started.md  sql-queries.md  transactions.md
hazelcast-client/: CONTRIBUTING.md  Cargo.toml  README.md
hazelcast-client/benches/: map_benchmarks.rs  queue_benchmarks.rs  serialization_benchmarks.rs
hazelcast-client/examples/: basic_usage.rs  cluster_discovery.rs  entry_processor_deployment.rs  map_listeners.rs  near_cache.rs  prometheus_metrics.rs  sql_queries.rs  tier2_verify.rs  transactions.rs
hazelcast-client/src/: client.rs  config.rs  config_file.rs  lib.rs  pipeline.rs  runtime.rs  tower_service.rs
hazelcast-client/src/cache/: mod.rs  near_cache.rs  query_cache.rs
hazelcast-client/src/cluster/: cluster_service.rs  cluster_view.rs  cp_management.rs  cp_session.rs  lifecycle_service.rs  mod.rs  partition_service.rs  split_brain.rs
hazelcast-client/src/connection/: auto_detect.rs  aws.rs  azure.rs  cloud.rs  connection.rs  data_connection.rs  discovery.rs  eureka.rs  gcp.rs  interceptor.rs  invocation.rs  kubernetes.rs  load_balancer.rs  manager.rs  mod.rs  multicast.rs  websocket.rs
hazelcast-client/src/deployment/: class_definition.rs  config.rs  mod.rs
hazelcast-client/src/diagnostics/: management_center.rs  mod.rs  slow_ops.rs  statistics.rs
hazelcast-client/src/executor/: durable.rs  mod.rs  scheduled.rs  service.rs
hazelcast-client/src/jet/: config.rs  job.rs  mod.rs  pipeline.rs  service.rs  status.rs
hazelcast-client/src/jet/connectors/: kafka.rs  mod.rs
hazelcast-client/src/listener/: entry_listener.rs  item_listener.rs  lifecycle.rs  membership.rs  mod.rs
hazelcast-client/src/metrics/: mod.rs
hazelcast-client/src/proxy/: atomic_long.rs  atomic_reference.rs  cache.rs  cardinality_estimator.rs  collection_stats.rs  countdown_latch.rs  cp_group.rs  cp_map.rs  distributed_iterator.rs  entry_processor.rs  fenced_lock.rs  flake_id.rs  interceptor.rs  list.rs  local_stats.rs  map.rs  map_stats.rs  mod.rs  multimap.rs  pipeline.rs  pn_counter.rs  queue.rs  reliable_topic.rs  replicated_map.rs  ringbuffer.rs  semaphore.rs  set.rs  topic.rs  vector_collection.rs
hazelcast-client/src/query/: aggregations.rs  index_config.rs  mod.rs  paging_predicate.rs  projections.rs
hazelcast-client/src/security/: authenticator.rs  authorization.rs  credentials.rs  kerberos.rs  mod.rs  tls_config.rs
hazelcast-client/src/sql/: mod.rs  service.rs
hazelcast-client/src/transaction/: mod.rs  xa.rs
hazelcast-client/src/wan/: event.rs  mod.rs  publisher.rs
hazelcast-client/tests/: README.md  aggregation_test.rs  async_map_test.rs  atomic_long_concurrency_test.rs  atomic_long_failover_test.rs  atomic_long_integration_test.rs  atomic_long_test.rs  atomic_reference_test.rs  auth_failure_test.rs  benchmark_comparison_test.rs  cache_create_config_test.rs  cache_roundtrip_test.rs  ci_docker_compose.yml  comprehensive_functional_test.rs  comprehensive_perf_test.rs  docker-compose.yml  entry_listener_dataeffect_test.rs  entry_processor_test.rs  event_journal_dataeffect_test.rs  event_journal_test.rs  executor_advanced_test.rs  executor_test.rs  failover_integration_test.rs  failover_test.rs  imap_concurrency_test.rs  integration_test.rs  java_parity_test.rs  jet_test.rs  large_value_fragmentation_test.rs  list_integration_test.rs  map_integration_test.rs  map_listener_test.rs  membership_test.rs  near_cache_integration_test.rs  paging_dataeffect_test.rs  paging_predicate_integration_test.rs  partition_metadata_test.rs  queue_integration_test.rs  queue_test.rs  reconnect_pool_test.rs  (+21 more)
hazelcast-client/tests/common/: mod.rs
hazelcast-core/: Cargo.toml
hazelcast-core/fuzz/: Cargo.toml
hazelcast-core/fuzz/fuzz_targets/: fuzz_client_message_decode.rs  fuzz_compact_deserialize.rs  fuzz_frame_decode.rs  fuzz_generic_record.rs  fuzz_portable_deserialize.rs
hazelcast-core/src/: error.rs  lib.rs  partition_aware.rs
hazelcast-core/src/protocol/: client_message.rs  codec.rs  constants.rs  frame.rs  mod.rs
hazelcast-core/src/serialization/: data_input.rs  data_output.rs  identified.rs  json.rs  mod.rs  serde.rs  traits.rs
hazelcast-core/src/serialization/compact/: generic_record.rs  mod.rs
hazelcast-core/src/serialization/portable/: mod.rs  reader_writer.rs  serializer.rs
hazelcast-core/tests/: serialization_proptest.rs
hazelcast-derive/: Cargo.toml
hazelcast-derive/src/: compact.rs  identified.rs  lib.rs  portable.rs
hazelrust-bench/: Cargo.toml
hazelrust-bench/src/: data.rs  main.rs  manifest.rs  ops.rs  record.rs  runner.rs
(+11 files in other folders)
