[workspace]
members = [
    "hazelcast-core",
    "hazelcast-client",
    "hazelcast-derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bhmortim/HazelRust"
homepage = "https://github.com/bhmortim/HazelRust"
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
