[package]
name = "hazelcast-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
tls = ["tokio-rustls", "rustls-pemfile", "webpki-roots", "rustls-pki-types"]
metrics = ["prometheus"]
aws = ["aws-config", "aws-sdk-ec2"]
kubernetes = ["kube", "k8s-openapi"]
cloud = ["reqwest"]

[dependencies]
hazelcast-core = { path = "../hazelcast-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }
prometheus = { version = "0.13", optional = true }

# AWS SDK (optional, for AWS discovery)
aws-config = { version = "1", optional = true }
aws-sdk-ec2 = { version = "1", optional = true }

# Kubernetes (optional, for K8s discovery)
kube = { version = "0.92", default-features = false, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.22", features = ["v1_30"], optional = true }

# Hazelcast Cloud (optional, for Cloud discovery)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
