[package]
name = "hazelcast-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Async Rust client for Hazelcast — distributed maps, queues, locks, transactions, SQL, and streaming on Tokio"
readme = "README.md"
keywords = ["hazelcast", "distributed", "cache", "cluster", "async"]
categories = ["asynchronous", "caching", "database", "network-programming"]

[features]
default = []
tls = ["tokio-rustls", "rustls-pemfile", "webpki-roots", "rustls-pki-types"]
kafka = ["rdkafka"]
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
aws = ["aws-config", "aws-sdk-ec2"]
kubernetes = ["kube", "k8s-openapi"]
cloud = ["reqwest"]
azure = ["azure_identity", "azure_core", "reqwest", "serde_json"]
gcp = ["reqwest", "serde_json"]
websocket = ["tokio-tungstenite", "url"]

[dependencies]
hazelcast-core = { path = "../hazelcast-core", features = ["serde"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rust_decimal = "1.36"
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
futures = "0.3"

tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true, default-features = false }

# AWS SDK (optional, for AWS discovery)
aws-config = { version = "1", optional = true }
aws-sdk-ec2 = { version = "1", optional = true }

# Kubernetes (optional, for K8s discovery)
kube = { version = "0.92", default-features = false, features = ["client", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.22", features = ["v1_30"], optional = true }

# Hazelcast Cloud (optional, for Cloud discovery)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

# Azure (optional, for Azure discovery)
azure_identity = { version = "0.22", optional = true }
azure_core = { version = "0.22", optional = true }
serde_json = { version = "1.0", optional = true }

# WebSocket (optional, for WebSocket transport)
tokio-tungstenite = { version = "0.24", optional = true }
url = { version = "2.5", optional = true }

# Kafka (optional, for Kafka connectors)
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
uuid = "1.0"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["blocking"] }
rand = "0.8"

[[bench]]
name = "map_benchmarks"
harness = false

[[bench]]
name = "queue_benchmarks"
harness = false

[[bench]]
name = "serialization_benchmarks"
harness = false
