[package]
name = "hazelcast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core wire protocol, serialization (Portable, Compact, serde), and error types for the Hazelcast Rust client"
readme = "../README.md"
keywords = ["hazelcast", "protocol", "serialization", "portable", "compact"]
categories = ["encoding", "network-programming"]

[features]
default = []
serde = ["dep:serde", "dep:bincode"]
json = ["dep:serde_json"]
derive = ["dep:hazelcast-derive"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
serde_json = { version = "1.0", optional = true }
hazelcast-derive = { path = "../hazelcast-derive", optional = true }
