[package]
name = "hazelrust-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "End-to-end benchmark harness for the HazelRust client (vs the official Hazelcast Java client). Consumes the shared bench manifest; emits HdrHistogram-backed result records."

[[bin]]
name = "hazelrust-bench"
path = "src/main.rs"

[dependencies]
hazelcast-client = { path = "../hazelcast-client" }
hazelcast-core = { path = "../hazelcast-core", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
anyhow = "1"
# Profile: built with the workspace default `--release` (opt-level=3, lto=false,
# codegen-units=16). Recorded verbatim in each record's provenance. A tuned
# profile (lto=thin, codegen-units=1) may be run as a labeled secondary point.
