[package]
name = "hazelcast-core-fuzz"
version = "0.0.0"
authors = ["Automated"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Standalone workspace. The fuzz crate lives under `hazelcast-core/` but is not a
# member of the root workspace; without this empty table, Cargo walks up, finds
# the root `[workspace]`, and aborts with "current package believes it's in a
# workspace when it's not". Decoupling it also lets the fuzz build resolve its own
# dependency set under the sanitizer RUSTFLAGS that cargo-fuzz injects.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"
arbitrary = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.hazelcast-core]
path = ".."

[[bin]]
name = "fuzz_frame_decode"
path = "fuzz_targets/fuzz_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_portable_deserialize"
path = "fuzz_targets/fuzz_portable_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compact_deserialize"
path = "fuzz_targets/fuzz_compact_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_client_message_decode"
path = "fuzz_targets/fuzz_client_message_decode.rs"
test = false
doc = false
bench = false
